--- a/Sass/_layout.scss
+++ b/Sass/_layout.scss
@@ -100,6 +100,7 @@ main{
     width: 100%;
     min-width: 416px;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 90vh;
     min-height: 510.297px;
     .portade{
@@ -127,7 +128,6 @@ main{
         background: linear-gradient( rgb(5 124 136) 0%, $gray 8%,);
         padding: 20px;
         margin: 0  5px 0 5px;
-        //width: 965px;
         width: 94%;
         height: fit-content;
     }
@@ -136,6 +136,10 @@ main{
         grid-column: 1;
         width: 100%;
         display: flex;
+        grid-column: 1;
+        display: inline-block;
+        width: 94%;
+        height: fit-content;
         .about{
             width: 100%;
             grid-column: 2/3;
@@ -200,7 +204,8 @@ main{
     overflow: hidden;
     margin-top: 10px;
     min-width: 280px;
-    //display: none;
+    opacity: 0 !important;
+    display: none !important;
 }
 
   .controls{
