--- a/Sass/main.css
+++ b/Sass/main.css
@@ -1919,7 +1919,7 @@ main .footer .about .about__portade .about__title {
   font-size: 20px;
 }
 main .footer .about .about__portade .about__img {
-  height: 520px;
+  height: 516px;
   background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
   background-size: cover;
   background-position: center 4%;
@@ -1942,7 +1942,8 @@ main .footer .about .about__portade .about__img h4, main .footer .about .about__
 main .footer .about .about__portade .about__img p {
   color: #fff;
   text-align: justify;
-  width: 655px;
+  width: 75%;
+  min-width: 325px;
   max-height: 70px;
   line-height: 25px;
   display: -webkit-box;
