Se crea el mixin para ocultar los elementos de .content segun el tamaño de la ventana, se aplica correctamente a .findOn

--- a/Sass/_base.scss
+++ b/Sass/_base.scss
@@ -34,7 +34,32 @@ $fontBold: bold;
       flex-direction: column;
     }
   }*/
+
 //---------mixins media query
+@mixin hiidenLastElement{
+    @media (max-width: 1515px) {
+        div:nth-child(5){
+            display: none;
+        }
+    }
+    @media (max-width:1326px){
+        div:nth-child(4){
+            display: none;
+        }
+    }
+    @media (max-width:1139px){
+        div:nth-child(3){
+            display: none;
+        }
+    }
+    @media (max-width:1007px){
+        div:nth-child(3){
+            display: flex;
+        }
+    }
+        
+}
+
 @mixin flex--collumn{
     @media (max-width: 767px) {
         display: flex;
